# rb1_base_sim

rb1_base_gazebo/: package.xml
rb1_base_gazebo/worlds/: kavezo.world  kavezo_tables  rb1_base_office.world
rb1_base_gazebo/worlds/kavezo/: model.config  model.sdf
rb1_base_sim_bringup/launch/: rb1_base_complete.launch
