<?xml version="1.0"?>
<package>
  <name>rb1_base_gazebo</name>
  <version>1.12.0</version>
  <description>The rb1_base_gazebo package</description>

   <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>


  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb1_base_gazebo</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>rb1_base_control</build_depend>
  <build_depend>rb1_base_description</build_depend>
  <build_depend>rb1_base_pad</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>diff_drive_controller</build_depend>
 

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rb1_base_control</run_depend>
  <run_depend>rb1_base_description</run_depend>
  <run_depend>rb1_base_pad</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>rviz</run_depend> 

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/worlds/" /> 
  </export>
</package>
